@startuml er_diagram
' hide the spot
hide circle
skinparam linetype ortho

entity "User (사용자)" as user {
  * id : UUID
  --
  * role : Enum(교사, 학생, 학부모)
  * name : String
  * email : String
  password : String
}

entity "Teacher (교사)" as teacher {
  * user_id : UUID <<FK>>
  --
  subject : String (주임과목)
}

entity "Student (학생)" as student {
  * user_id : UUID <<FK>>
  --
  grade_level : Int (학년)
  class_num : Int (반)
  student_num : Int (번호)
}

entity "Parent (학부모)" as parent {
  * user_id : UUID <<FK>>
  --
  phone_number : String
}

entity "ParentStudent (학부모-학생 관계)" as parent_student {
  * parent_id : UUID <<FK>>
  * student_id : UUID <<FK>>
  --
  relation : String
}

entity "AcademicRecord (학생부)" as academic_record {
  * id : UUID
  * student_id : UUID <<FK>>
  --
  attendance_info : Text (출결)
  special_notes : Text (특기사항)
}

entity "Subject (과목)" as subject {
  * id : UUID
  --
  name : String
}

entity "TeacherSubject (교사-과목)" as teacher_subject {
  * teacher_id : UUID <<FK>>
  * subject_id : UUID <<FK>>
}

entity "Grade (성적)" as grade {
  * id : UUID
  * student_id : UUID <<FK>>
  * subject_id : UUID <<FK>>
  * teacher_id : UUID <<FK>>
  --
  term : String (학기)
  score : Float
  calculated_grade : String (등급)
}

entity "Feedback (피드백)" as feedback {
  * id : UUID
  * student_id : UUID <<FK>>
  * teacher_id : UUID <<FK>>
  --
  type : Enum(성적, 행동, 출결, 태도)
  content : Text
  visibility : Enum(PRIVATE, STUDENT, PARENT, ALL)
  created_at : DateTime
}

entity "CounselingRecord (상담 내역)" as counseling {
  * id : UUID
  * student_id : UUID <<FK>>
  * teacher_id : UUID <<FK>>
  --
  counsel_date : Date
  content : Text
  next_plan : Text
  is_shared : Boolean (기타 교사 공유 여부)
  created_at : DateTime
}

entity "Notification (알림)" as notification {
  * id : UUID
  * user_id : UUID <<FK>>
  --
  title : String
  content : Text
  is_read : Boolean
  created_at : DateTime
}

' ── 분석용 컬렉션 (OLAP) ───────────────────────────────────
entity "StudentLearningSnapshot\n(학생별 학습 현황 스냅샷)" as student_snapshot {
  * id : UUID
  * student_id : UUID <<FK>>
  --
  term : String (학기, e.g. "2024-1")
  avg_score : Float (전체 평균 점수)
  overall_grade : String (종합 등급)
  subject_scores : Array<{subject_id, name, score, grade}>
  attendance_summary : String (출결 요약)
  feedback_count : Int
  counseling_count : Int
  snapshot_at : DateTime (집계 시점)
}

entity "SubjectProgressSummary\n(과목별 진도 요약)" as subject_summary {
  * id : UUID
  * student_id : UUID <<FK>>
  * subject_id : UUID <<FK>>
  --
  score_history : Array<{term, score, grade}>
  avg_score : Float (해당 과목 평균)
  trend : Enum(UP, DOWN, STABLE)
  last_updated_at : DateTime
}

user ||--o| teacher
user ||--o| student
user ||--o| parent

parent ||--o{ parent_student
student ||--o{ parent_student

student ||--|| academic_record
student ||--o{ grade
subject ||--o{ grade
teacher ||--o{ grade

teacher ||--o{ teacher_subject
subject ||--o{ teacher_subject

student ||--o{ feedback
teacher ||--o{ feedback

student ||--o{ counseling
teacher ||--o{ counseling

user ||--o{ notification

student ||--o{ student_snapshot
student ||--o{ subject_summary
subject ||--o{ subject_summary
@enduml
